# fastapi-simple-template

./: .ruff.toml  Dockerfile  README.md  pyproject.toml
.cursor/rules/: fba.mdc
.trae/rules/: project_rules.md
deploy/: gunicorn.conf.py
