[project]
name = "fastapi_sqlalchemy_mysql"
version = "0.0.1"
description = "fastapi sqlalcehmy with mysql"
authors = [
    {name = "dlivxpr", email = "dlivxpr@hotmail.com"},
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "alembic==1.16.4",
    "asyncmy==0.2.10",
    "bcrypt==4.3.0",
    "cryptography==45.0.5",
    "email_validator==2.2.0",
    "fast-captcha==0.3.2",
    "fastapi[all]==0.116.1",
    "fastapi-limiter==0.1.6",
    "fastapi-pagination==0.13.3",
    "loguru==0.7.3",
    "path==17.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.20",
    "redis[hiredis]==6.2.0",
    "SQLAlchemy==2.0.42",
    "tzdata==2025.2",
    "sqlalchemy-crud-plus>=1.10.0",
    "pwdlib>=0.2.1",
    "msgspec>=0.19.0",
]


[dependency-groups]
lint = [
    "pre-commit>=4.2.0",
]
server = [
    "gunicorn>=23.0.0",
    "wait-for-it>=2.3.0",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
